--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,6 +1,6 @@
 <h1>CONFERENCE ROOM RESERVATION APP</h1>
 
-<a href="">ROOM LIST</a>
+<a href="/room/view">ROOM LIST</a>
 <br>
 <a href="/room/new">ADD ROOM</a>
 <br>
